--- a/public/style.css
+++ b/public/style.css
@@ -139,7 +139,7 @@ header svg {
 }
 
 .body .note-item,
-.body .note-item.note-item-archive.note-item-archive-show {
+.body .note-item.note-item-archive {
   filter: blur(0);
   cursor: pointer;
   width: 224px;
@@ -147,14 +147,20 @@ header svg {
   left: 0;
   top: 0;
   transform: scale(1) translateY(0%);
-  transition: all .4s cubic-bezier(0.77, 0, 0.175, 1) .1s;
+  animation: hidenote .4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-.note-item.note-item-archive,
-.note-item.note-item-hide {
-  position: absolute;
-  left: 83%;
-  transform: scale(.1) translateY(-50%);
+@keyframes hidenote {
+  from {
+    position: absolute;
+    left: 83%;
+    transform: scale(.1) translateY(-50%);
+  }
+  to {
+    position: relative;
+    left: 0;
+    transform: scale(1) translateY(0%);
+  }
 }
 
 .body .note-item.note-item-filter,
@@ -365,11 +371,11 @@ footer .note-add {
 }
 
 footer .note-add svg {
-  width: 37px;
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(50%, 10%);
+  transform: translate(100%, 30%) rotate(17deg);
+  color: #CB7E35;
 }
 
 .overlay {
@@ -383,8 +389,17 @@ footer .note-add svg {
   display: flex;
   justify-content: center;
   align-items:baseline;
-  transform: scale(0);
+  transform: scale(1);
   transition: transform .4s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  animation: scale .4s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(0);
+  } 100% {
+    transform: scale(1);
+  }
 }
 
 .overlay.overlay-note-add, .overlay.overlay-note-edit {
